@@ -67,7 +67,17 @@ fail2ban_config()
     ECHO_DEBUG "Copy sample Fail2ban filter config files."
     cp -f ${SAMPLE_DIR}/fail2ban/filter.d/*.conf ${FAIL2BAN_FILTER_DIR}
 
-    # Enable SOGo.
+    # Enable Nginx
+    if [ X"${WEB_SERVER}" == X'APACHE' ]; then
+        perl -pi -e 's#(enabled.*=.*)false#${1}true#' ${FAIL2BAN_JAIL_CONF_DIR}/apache-auth.local
+    elif [ X"${WEB_SERVER}" == X'NGINX' ]; then
+        perl -pi -e 's#(enabled.*=.*)false#${1}true#' ${FAIL2BAN_JAIL_CONF_DIR}/nginx-http-auth.local
+    fi
+
+    if [ X"${USE_ROUNDCUBE}" == X'YES' ]; then
+        perl -pi -e 's#(enabled.*=.*)false#${1}true#' ${FAIL2BAN_JAIL_CONF_DIR}/roundcube.local
+    fi
+
     if [ X"${USE_SOGO}" == X'YES' ]; then
         perl -pi -e 's#(enabled.*=.*)false#${1}true#' ${FAIL2BAN_JAIL_CONF_DIR}/sogo.local
     fi
