@@ -1,5 +1,5 @@
 [roundcube-iredmail]
-enabled     = true
+enabled     = false
 filter      = roundcube.iredmail
 action      = PH_FAIL2BAN_ACTION[name=roundcube, port="PH_FAIL2BAN_DISABLED_SERVICES", protocol=tcp]
 logpath     = PH_RCM_LOGFILE
